# digit360

./: .gitignore  CONTRIBUTING.md  README.md  setup.py
design/: README.md
design/fingertip/: digit360_fingertip.stp
design/hardware/templates/gelsensor/: GS_Connector.SchDoc  GS_LEDs.SchDoc  GS_Sensors.SchDoc  GelSensor_Template.PrjPcb
design/lens/: digit360_lens.stp
design/lens/elements/: digit360_lens_L 1.stp  digit360_lens_L 2.stp  digit360_lens_L 3.stp  digit360_lens_L 4.stp  digit360_lens_L 5.stp  digit360_lens_Stop.stp  digit360_lens_adhesive.stp  digit360_lens_filter.stp
design/lens/spdt/: digit360_spdt_lens.STEP
digit360/: README.md  install_digit360_venv.sh
digit360/interface/: digit360.py
digit360/interface/control/: ident.py  led.py
digit360/interface/examples/: test_audio.py  test_image.py  test_led.py  test_stream.py  test_usb.py
digit360/interface/proto/: __init__.py  digit360_proto_v1.proto
digit360/interface/system/: digit360_programmer.py
digit360/interface/usb/: usb.py
digit360/requirements/: requirements.txt
digit360/ros2/: README.md
digit360/ros2/d360/: colcon_build.sh  package.xml  setup.py
digit360/ros2/d360/config/: hand_config.yaml
digit360/ros2/d360/d360/: d360_audio_pub.py  d360_gas_pub.py  d360_image_encode.py  d360_image_pub.py  d360_serial_io.py
digit360/ros2/d360/d360/examples/: d360_image_decode.py
digit360/ros2/d360/launch/: d360_hand_launch.py  d360_launch.py  d360_min_launch.py
digit360/ros2/d360_msgs/: CMakeLists.txt  package.xml
digit360/ros2/d360_msgs/msg/: AudioDataD360.msg  AudioInfoD360.msg  GasHTData.msg  ImuEulerD360.msg  ImuQuatD360.msg  ImuRawD360.msg  LightControl.msg  PressureAPD360.msg  PressureD360.msg
digit360/udev/: 50-digit360.rules  README.md
docs/: README.md
firmware/ics/: digit360_ics_ctrl_v001.img
meshes/: digit360_allegro_right.urdf  digit360_allegro_right_4sec.urdf  digit360_mesh.stl
meshes/discrete/: digit2_sec4_sensor_1l0.stl  digit2_sec4_sensor_1l1.stl  digit2_sec4_sensor_1l2.stl  digit2_sec4_sensor_1l3.stl  digit2_sec4_sensor_2l0.stl  digit2_sec4_sensor_2l1.stl  digit2_sec4_sensor_2l2.stl  digit2_sec4_sensor_2l3.stl  digit2_sec4_sensor_3l0.stl  digit2_sec4_sensor_3l1.stl  digit2_sec4_sensor_3l2.stl  digit2_sec4_sensor_3l3.stl  digit2_sec4_sensor_4l3.stl  digit2_sensor_1l0.stl  digit2_sensor_1l1.stl  digit2_sensor_1l10.stl  digit2_sensor_1l11.stl  digit2_sensor_1l12.stl  digit2_sensor_1l13.stl  digit2_sensor_1l14.stl  digit2_sensor_1l15.stl  digit2_sensor_1l16.stl  digit2_sensor_1l17.stl  digit2_sensor_1l18.stl  digit2_sensor_1l19.stl  digit2_sensor_1l2.stl  digit2_sensor_1l20.stl  digit2_sensor_1l21.stl  digit2_sensor_1l22.stl  digit2_sensor_1l23.stl  digit2_sensor_1l24.stl  digit2_sensor_1l25.stl  digit2_sensor_1l26.stl  digit2_sensor_1l27.stl  digit2_sensor_1l28.stl  digit2_sensor_1l29.stl  digit2_sensor_1l3.stl  digit2_sensor_1l30.stl  digit2_sensor_1l31.stl  digit2_sensor_1l32.stl  (+86 more)
train/multimodal/: README.md  train.py
train/multimodal/d360/: datasets.py  model.py  trainer.py  utils.py
