<!--
  Copyright (c) Meta Platforms, Inc. and affiliates.
  All rights reserved.

  This source code is licensed under the license found in the
  LICENSE file in the root directory of this source tree.
-->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Digit 360 ROS2</name>
  <version>0.0.0</version>
  <description>
    Digit 360 is a modular platform that unlocks new capabilities, and enables future research on the nature of touch.
  </description>
  <maintainer email="boddulurkrishna@meta.com">Chaithanya krishna</maintainer>
  <license>CC BY-NC 4.0</license>

  <depend>rclpy</depend>
  <depend>d360_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
